Fixes review round-3 findings L26-L33; documents lesson 114
Plugin:
L26: the mojo is marked threadSafe=true (asserted via the generated
    plugin descriptor — plugin annotations are CLASS-retention).
L27: a JSON metadata response fails with a clear message (the StAX
    parser only supports CSDL XML); the download already requested
    application/xml only.
L28: configuring both metadataUrl and metadataFile logs a warning
    naming which one wins.

Build:
L29: <release>17</release> replaces source/target (the switch caught a
    real latent bug: List.getFirst() is Java 21+ and had been compiling
    only because builds ran on a newer JDK); reproducible-builds
    outputTimestamp plus source/javadoc plugin pins; slf4j-simple is
    version-managed; maven-plugin-plugin pinned with goalPrefix.
L30: the test module references its own copy of trippin-metadata.xml
    via ${project.basedir} — no more cross-module reach-ins.
L32: run-bench.sh points at the real benchmark package and writes
    under target/ instead of /tmp.

Docs/hygiene:
L31: custom-transport.md rewritten — the JDK transport is the only
    bundled one, the OkHttp example is labeled as bring-your-own
    dependency with a compilable stream() body.
L33: .idea/* and *.iml untracked and gitignored (and a broken fused
    gitignore pattern fixed); Maven wrapper added.

3 new plugin tests; full reactor hermetic (482) and live (604) green.